# LogWriter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/socket_listener/include/: data_analyzer.hpp
app/socket_listener/src/: data_analyzer.cpp  main.cpp
app/socket_listener/tests/: tests.cpp
app/socket_reader/include/: data_analyzer.hpp
app/socket_reader/src/: data_analyzer.cpp  main.cpp
app/worker/include/: worker.hpp
app/worker/src/: main.cpp  worker.cpp
app/worker/tests/: tests.cpp
include/: worker.hpp
lib/logWriter/: CMakeLists.txt
lib/logWriter/example/: logSocket.cpp  logStruct.cpp  serverSetUp.py
lib/logWriter/include/: logWriter.h
lib/logWriter/resources/libExpectedLogs/: 2  3  4
lib/logWriter/src/: logWriter.cpp
lib/logWriter/tests/: tests.cpp
lib/testFramework/: testFramework.h
resources/appExpectedLogs/: 1  2  3
src/: main.cpp  worker.cpp
tests/: tests.cpp
